[tool.poetry]
name = "alianzas-tracker"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
igramscraper = "^0.3.5"
ipykernel = "^5.3.4"
bashplotlib = "^0.6.5"
plotille = "^3.7"
pandas = "^1.1.1"
plotly = "^4.9.0"
ipywidgets = "^7.5.1"
bokeh = "^2.2.0"
statsmodels = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
